# TFG

./: LICENSE  README.md
codigo/: Greedy_Jaccard.cpp  Greedy_Jaccard3.cpp  exhaustiva.cpp  greedy_bitset.cpp  script_exhaustiva.sh  script_greedy.sh
tfg-exp/: CMakeLists.txt
tfg-exp/scripts/: experimento_genetico.py  experimentos.py
tfg-exp/tfgcore/include/: domain.hpp  exhaustiva.hpp  expr.hpp  generator.hpp  genetico.hpp  greedy.hpp  ground_truth.hpp  metrics.hpp  solutions.hpp
tfg-exp/tfgcore/src/: exhaustiva.cpp  generator.cpp  genetico.cpp  greedy.cpp  ground_truth.cpp  main.cpp  metrics.cpp
